--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 </head>
 
 <body>
+    <header>
+        <div class="navbar">
+            <div class="logo">
+                <a href="#home"><img src="img/other/logo.png" alt=""></a>
+            </div>
+            <nav>
 
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
