basic header structure

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
                 <a href="#home"><img src="img/other/logo.png" alt=""></a>
             </div>
             <nav>
-
+                <ul>
+                    <li>Home</li>
+                    <li>Menu</li>
+                    <li>Contact Us</li>
+                </ul>
             </nav>
+            <div class="icon-s">
+                <li><i class="fas fa-user"></i></li>
+                <li><i class="fas fa-shopping-basket"></i></li>
+            </div>
         </div>
     </header>
 </body>
