add introduction text

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             </div>
         </div>
     </header>
+    <section class="home">
+        <div class="intro">
+            <h4>we both know why you are here <span><i class="fas fa-smile-wink"></i></span></h4>
+            <h5>and we won't <span class="dare text-danger">dare</span> dissapoint</h5>
+        </div>
+    </section>
 </body>
 
 </html>
