--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="intro">
             <h4>we both know why you are here <span><i class="fas fa-smile-wink"></i></span></h4>
             <h5>and we won't <span class="dare text-danger">dare</span> dissapoint</h5>
+            <button class="menu">MENU</button>
         </div>
     </section>
 </body>
