--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
             <h5>and we won't <span class="dare text-danger">dare</span> dissapoint</h5>
             <button class="menu">MENU</button>
         </div>
+        <div class="newsletter">
+            <h5>Subscribe to get our offers:</h5>
+            <form action="">
+                <div class="sub">
+                    <div class="names">
+                        <span><i class="far fa-user"></i></span>
+                        <input type="text" id="name" placeholder="name" name="FNAME">
+                    </div>
+                    <div class="emails">
+                        <span><i class="far fa-envelope"></i></span>
+                        <input type="email" name="EMAIL" id="mail" placeholder="Email">
+                    </div>
+                </div>
+            </form>
+        </div>
     </section>
 </body>
 
