add brief section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <section class="home">
+    <section id="home">
         <div class="intro">
             <h4>we both know why you are here <span><i class="fas fa-smile-wink"></i></span></h4>
             <h5>and we won't <span class="dare text-danger">dare</span> dissapoint</h5>
@@ -65,6 +65,28 @@
                 </div>
             </form>
         </div>
+    </section>
+
+    <section id="about-us">
+        <h3>BRIEF</h3>
+        <p>ready on the go</p>
+        <h6><button class="reg btn"><i class="fas fa-user"></i></button> <i class="fas fa-grip-lines-vertical"></i>
+            Register/login to your user account</h6>
+        <i class="fas fa-angle-double-down"></i>
+        <h6><button class="pizza btn"><i class="fas fa-pizza-slice"></i></button> <i
+                class="fas fa-grip-lines-vertical"></i> Select pizza from the menu</h6>
+        <i class="fas fa-angle-double-down"></i>
+        <h6><button class="btn"><i class="fas fa-cart-arrow-down"></i></button> <i
+                class="fas fa-grip-lines-vertical"></i> Add selected pizza to your cart</h6>
+        <i class="fas fa-angle-double-down"></i>
+        <h6><button class="btn"><i class="fas fa-people-carry"></i></button> <i class="fas fa-grip-lines-vertical"></i>
+            set an option to pick your order or to get it delivered to your doorstep</h6>
+        <i class="fas fa-angle-double-down"></i>
+        <h6><button class="btn"><i class="fas fa-credit-card"></i></button> <i class="fas fa-grip-lines-vertical"></i>
+            CheckOut your order. You can pay on delivery or when you pick up your order</h6>
+        <i class="fas fa-angle-double-down"></i>
+        <h6><button class="btn"><i class="fas fa-utensils"></i></button> <i class="fas fa-grip-lines-vertical"></i>
+            Enjoy your meal <i class="fas fa-smile-beam"></i></h6>
     </section>
 </body>
 
