add footer section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         <h6><button class="btn"><i class="fas fa-utensils"></i></button> <i class="fas fa-grip-lines-vertical"></i>
             Enjoy your meal <i class="fas fa-smile-beam"></i></h6>
     </section>
+
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
