--- a/index.html
+++ b/index.html
@@ -90,7 +90,15 @@
     </section>
 
     <footer>
-        
+        <div class="cont">
+            <div class="col-xs-4">
+                <ul>
+                    <li>Menu</li>
+                    <li>Contact us</li>
+                    <li>Feedback</li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
