add footer elements

--- a/index.html
+++ b/index.html
@@ -90,14 +90,30 @@
     </section>
 
     <footer>
-        <div class="cont">
+        <div class="row">
             <div class="col-xs-4">
+                <h4>Quick Links</h4>
                 <ul>
                     <li>Menu</li>
                     <li>Contact us</li>
                     <li>Feedback</li>
                 </ul>
             </div>
+            <div class="col-xs-4">
+                <ul>
+                    <li>About us</li>
+                    <li>Privacy</li>
+                    <li>Terms & Conditions</li>
+                </ul>
+            </div>
+            <div class="col-xs-4">
+                <ul>
+                    <li><img src="img/other/whatsapp.jpg" alt=""></li>
+                    <li>Privacy</li>
+                    <li>Terms & Conditions</li>
+                </ul>
+            </div>
+
         </div>
     </footer>
 </body>
