--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 </ul>
             </div>
             <div class="col-xs-4">
+                <h4>Information Links</h4>
                 <ul>
                     <li>About us</li>
                     <li>Privacy</li>
@@ -107,10 +108,12 @@
                 </ul>
             </div>
             <div class="col-xs-4">
-                <ul>
-                    <li><img src="img/other/whatsapp.jpg" alt=""></li>
-                    <li>Privacy</li>
-                    <li>Terms & Conditions</li>
+                <h4>Social Media Links</h4>
+                <ul class="social-media">
+                    <li><img src="img/other/whatsapp.png" alt="" style="width: 12%;">+25470897380</li>
+                    <li><img src="img/other/fb.png" alt="" style="width: 12%;">PizzaHaven</li>
+                    <li><img src="img/other/ig.png" alt="" style="width: 12%;">PizzaHaven</li>
+                    <li><img src="img/other/twitter.png" alt="" style="width: 12%;">@pizzahaven</li>
                 </ul>
             </div>
 
