--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
                     <li><img src="img/other/twitter.png" alt="" style="width: 10%;">@pizzahaven</li>
                 </ul>
             </div>
-
         </div>
+        <p class="copyright">© 2022 PizzaHaven Kenya. All rights reserved. Powered by <a
+                href="https://lyonsmasawa.github.io/Portfolio/" target="_blank">LyonsX</a></p>
     </footer>
 </body>
 
