--- a/feedback.html
+++ b/feedback.html
@@ -24,8 +24,19 @@
         <title>PizzaHaven</title>
     </head>
 <body>
-    <form action="">
-        in
-    </form>
+    <h5>Subscribe to get our offers:</h5>
+            <form action="">
+                <div class="sub">
+                    <div class="names">
+                        <span><i class="far fa-user"></i></span>
+                        <input type="text" id="name" placeholder="name" name="FNAME">
+                    </div>
+                    <div class="emails">
+                        <span><i class="far fa-envelope"></i></span>
+                        <input type="email" name="EMAIL" id="mail" placeholder="Email">
+                    </div>
+                    <input type="number" name="number" id="number" placeholder="Number">
+                </div>
+            </form>
 </body>
 </html>
