add feedback header

--- a/feedback.html
+++ b/feedback.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h5>Subscribe to get our offers:</h5>
+    <h2>FEEDBACK FORM</h2>
     <form action="">
         <div class="sub">
             <div class="names">
