--- a/feedback.html
+++ b/feedback.html
@@ -26,10 +26,19 @@
 </head>
 
 <body>
-    <h3>FEEDBACK FORM</h3>
-    <form action="" >
-        
-    </form>
+    <h4>FEEDBACK </h4>
+    <div class="container">
+        <h5>Feedback</h5>
+       <div class="row">
+           <form action="">
+               <div class="col-xs-6">
+                   <div class="name">
+                       
+                   </div>
+               </div>
+           </form>
+       </div>
+    </div>
 </body>
 
 </html>
