add name section

--- a/feedback.html
+++ b/feedback.html
@@ -33,7 +33,13 @@
            <form action="">
                <div class="col-xs-6">
                    <div class="name">
-                       
+                       <label for="cust_name">
+                           Name<span class="text-danger"> *</span>
+                       </label>
+                       <div class="name-group input-group">
+                           <button class="btn"><span class="fas fa-user"></span></button>
+                           <input type="text" class="form-control" name="NAME" id="cname" required>
+                       </div>
                    </div>
                </div>
            </form>
