add email section

--- a/feedback.html
+++ b/feedback.html
@@ -29,21 +29,46 @@
     <h4>FEEDBACK </h4>
     <div class="container">
         <h5>Feedback</h5>
-       <div class="row">
-           <form action="">
-               <div class="col-xs-6">
-                   <div class="name">
-                       <label for="cust_name">
-                           Name<span class="text-danger"> *</span>
-                       </label>
-                       <div class="name-group input-group">
-                           <button class="btn"><span class="fas fa-user"></span></button>
-                           <input type="text" class="form-control" name="NAME" id="cname" required>
-                       </div>
-                   </div>
-               </div>
-           </form>
-       </div>
+        <form class="" action="">
+            <div class="row">
+                <div class="col-xl-4">
+                    <div class="name">
+                        <label for="cust_name">
+                            Name<span class="text-danger"> *</span>
+                        </label>
+                        <div class="name-group input-group">
+                            <button class="btn"><span class="fas fa-user"></span></button>
+                            <input type="text" class="form-control" name="NAME" id="cname" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="Number">
+                        <label for="cust_num">
+                            Number<span class="text-danger"> *</span>
+                        </label>
+                        <div class="name-group input-group">
+                            <button class="btn"><span class="fas fa-mobile"></span></button>
+                            <input type="text" class="form-control" name="NUM" id="cnum" required>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-8">
+                    <div class="Number">
+                        <label for="cust_num">
+                            Email<span class="text-danger"> *</span>
+                        </label>
+                        <div class="name-group input-group">
+                            <button class="btn"><span class="fas fa-envelope"></span></button>
+                            <input type="text" class="form-control" name="NUM" id="cnum" required>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+
     </div>
 </body>
 
