--- a/feedback.html
+++ b/feedback.html
@@ -67,6 +67,12 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <h6> Our Food</h6>
+                    
+                </div>
+            </div>
         </form>
 
     </div>
