--- a/feedback.html
+++ b/feedback.html
@@ -70,6 +70,10 @@
             <div class="row">
                 <div class="col-md-3">
                     <h6> Our Food</h6>
+
+                </div>
+                <div class="col-md-3">
+                    <h6> Our Service</h6>
                     
                 </div>
             </div>
