add submit button

--- a/feedback.html
+++ b/feedback.html
@@ -67,6 +67,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="row">
                 <div class="col-md-3">
                     <h6> Our Food</h6>
@@ -75,6 +76,12 @@
                 <div class="col-md-3">
                     <h6> Our Service</h6>
                     
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-3">
+                    <input type="submit" class="bn btn-bg" value="SUBMIT FEEDBACK">
                 </div>
             </div>
         </form>
