--- a/feedback.html
+++ b/feedback.html
@@ -81,7 +81,7 @@
             <br>
             <div class="row">
                 <div class="col-md-3">
-                    <input type="submit" class="bn btn-bg" value="SUBMIT FEEDBACK">
+                    <button class="sub-m"><i class="far fa-paper-plane"></i><input type="submit" class="btn btn-bg" value="SUBMIT FEEDBACK"></button>
                 </div>
             </div>
         </form>
