--- a/index.html
+++ b/index.html
@@ -25,29 +25,25 @@
     <title>PizzaHaven</title>
 </head>
 
-<body>
+<body class="container-fluid">
     <header>
-        <div class="navbar">
+        <nav>
             <div class="logo">
-                <a href="#home"><img src="img/other/logo.png" alt=""></a>
+                <a href="#home"><img class="lg" src="img/other/logo.png" alt="" style="width: 50%;"></a>
             </div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Menu</li>
-                    <li>Contact Us</li>
-                </ul>
-            </nav>
-            <div class="icon-s">
-                <li><i class="fas fa-user"></i></li>
+            <ul class="navcontent">
+                <li><i class="fas fa-home"></i> Home</li>
+                <li><i class="fas fa-bars"></i> Menu</li>
+                <li><i class="fas fa-phone"></i> Contacts</li>
+                <li><i class="fas fa-user"></i> Login</li>
                 <li><i class="fas fa-shopping-basket"></i></li>
-            </div>
-        </div>
+            </ul>
+        </nav>
     </header>
     <section id="home">
         <div class="intro">
             <h4>we both know why you are here <span><i class="fas fa-smile-wink"></i></span></h4>
-            <h5>and we won't <span class="dare text-danger">dare</span> dissapoint</h5>
+            <h5>and we won't <kbd><span class="dare text-danger ">dare</span></kbd> dissapoint</h5>
             <button class="menu">MENU</button>
         </div>
         <div class="newsletter">
