--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
             <h5>and we won't <kbd><span class="dare text-danger ">dare</span></kbd> dissapoint</h5>
             <button class="menu">MENU</button>
         </div>
-        <div class="newsletter">
+        <div class="newsletter card">
             <h5>Subscribe to get our offers:</h5>
             <form action="">
-                <div class="sub">
-                    <div class="names">
-                        <span><i class="far fa-user"></i></span>
-                        <input type="text" id="name" placeholder="name" name="FNAME">
+                <div class="sub row">
+                    <div class="name-group input-group col">
+                        <button class="btn"><span class="fas fa-user"></span></button>
+                        <input type="text" placeholder="name" class="form-control" name="NUM" id="cnum" required>
                     </div>
-                    <div class="emails">
-                        <span><i class="far fa-envelope"></i></span>
-                        <input type="email" name="EMAIL" id="mail" placeholder="Email">
+                    <div class="name-group input-group col">
+                        <button class="btn"><span class="fas fa-envelope"></span></button>
+                        <input type="text" placeholder="enter your mail here..." class="form-control" name="NUM"
+                            id="cnum" required>
                     </div>
                 </div>
             </form>
