add subscribe buitton

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <input type="text" placeholder="enter your mail here..." class="form-control" name="NUM"
                             id="cnum" required>
                     </div>
+                    <div class="coll">
+                        <input type="submit" class="btn newbtn form-control" value="SUBSCRIBE">
+                    </div>
                 </div>
             </form>
         </div>
