restructure page arrangement

--- a/index.html
+++ b/index.html
@@ -49,25 +49,44 @@
     </section>
 
     <section id="about-us">
-        <h3>BRIEF</h3>
-        <p>ready on the go</p>
-        <h6><button class="reg btn"><i class="fas fa-user"></i></button> <i class="fas fa-grip-lines-vertical"></i>
-            Register/login to your user account</h6>
-        <i class="fas fa-angle-double-down"></i>
-        <h6><button class="pizza btn"><i class="fas fa-pizza-slice"></i></button> <i
-                class="fas fa-grip-lines-vertical"></i> Select pizza from the menu</h6>
-        <i class="fas fa-angle-double-down"></i>
-        <h6><button class="btn"><i class="fas fa-cart-arrow-down"></i></button> <i
-                class="fas fa-grip-lines-vertical"></i> Add selected pizza to your cart</h6>
-        <i class="fas fa-angle-double-down"></i>
-        <h6><button class="btn"><i class="fas fa-people-carry"></i></button> <i class="fas fa-grip-lines-vertical"></i>
-            set an option to pick your order or to get it delivered to your doorstep</h6>
-        <i class="fas fa-angle-double-down"></i>
-        <h6><button class="btn"><i class="fas fa-credit-card"></i></button> <i class="fas fa-grip-lines-vertical"></i>
-            CheckOut your order. You can pay on delivery or when you pick up your order</h6>
-        <i class="fas fa-angle-double-down"></i>
-        <h6><button class="btn"><i class="fas fa-utensils"></i></button> <i class="fas fa-grip-lines-vertical"></i>
-            Enjoy your meal <i class="fas fa-smile-beam"></i></h6>
+        <div class="row">
+            <div class="col-md-3 x">
+                <div class="row one"></div>
+                <div class="row two"></div>
+                <!-- <img class="img-fluid" src="img/unsplash/pizza2.jpg" alt=""> -->
+            </div>
+            <div class="col-md-6">
+                <h3>BRIEF</h3>
+                <p>ready on the go</p>
+                <h6><button class="reg btn"><i class="fas fa-user"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i>
+                    Register/login to your user account</h6>
+                <i class="fas fa-angle-double-down"></i>
+                <h6><button class="pizza btn"><i class="fas fa-pizza-slice"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i> Select pizza from the menu</h6>
+                <i class="fas fa-angle-double-down"></i>
+                <h6><button class="btn"><i class="fas fa-cart-arrow-down"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i> Add selected pizza to your cart</h6>
+                <i class="fas fa-angle-double-down"></i>
+                <h6><button class="btn"><i class="fas fa-people-carry"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i>
+                    set an option to pick your order or to get it delivered to your doorstep</h6>
+                <i class="fas fa-angle-double-down"></i>
+                <h6><button class="btn"><i class="fas fa-credit-card"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i>
+                    CheckOut your order. You can pay on delivery or when you pick up your order</h6>
+                <i class="fas fa-angle-double-down"></i>
+                <h6><button class="btn"><i class="fas fa-utensils"></i></button> <i
+                        class="fas fa-grip-lines-vertical"></i>
+                    Enjoy your meal <i class="fas fa-smile-beam"></i></h6>
+            </div>
+            <div class="col-md-3">
+                <img class="img-fluid" src="img/unsplash/bg3.jpg" alt="">
+                <br>
+                <hr>
+                <img class="img-fluid" src="img/unsplash/bg2.jpg" alt="">
+            </div>
+        </div>
     </section>
 
     <footer>
