--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         <div class="row">
             <div class="col-md-3 x">
                 <div class="row one"></div>
-                <div class="row two"></div>
                 <!-- <img class="img-fluid" src="img/unsplash/pizza2.jpg" alt=""> -->
             </div>
             <div class="col-md-6">
@@ -80,11 +79,10 @@
                         class="fas fa-grip-lines-vertical"></i>
                     Enjoy your meal <i class="fas fa-smile-beam"></i></h6>
             </div>
-            <div class="col-md-3">
-                <img class="img-fluid" src="img/unsplash/bg3.jpg" alt="">
-                <br>
-                <hr>
-                <img class="img-fluid" src="img/unsplash/bg2.jpg" alt="">
+            <div class="col-md-3 x">
+                <div class="row two"></div>
+                <!-- <img class="img-fluid" src="img/unsplash/bg3.jpg" alt=""> -->
+                <!-- <img class="img-fluid" src="img/unsplash/bg2.jpg" alt=""> -->
             </div>
         </div>
     </section>
