add icon on home screen

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
     <section id="home">
         <div class="intro">
+            <p><img src="img/other/icon.png" alt=""></p>
             <h4>we both know why you are here <span><i class="fas fa-smile-wink"></i></span></h4>
             <h5>and we won't <kbd><span class="dare text-danger ">dare</span></kbd> dissapoint</h5>
             <button class="menu">MENU</button>
