restructure page arrangement

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <h1 class="brief">BRIEF</h1>
         <p>ready on the go</p>
         <br>
-        <div class="row">
+        <div class="row y">
             <div class="col-md-3 x">
                 <div class="row one"></div>
                 <!-- <img class="img-fluid" src="img/unsplash/pizza2.jpg" alt=""> -->
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 z">
                 <div class="card">
                     <h6><button class="reg btn"><i class="fas fa-user"></i></button>
                         Register/login to your user account</h6>
