--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </form>
         </div>
-        <div class="row">
+        <div class="row quick-links">
             <div class="col-xs-4">
                 <h4>Quick Links</h4>
                 <ul>
