--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </form>
         </div>
         <div class="row quick-links" id="contactus">
-            <div class="col-xs-4">
+            <div class="col-md-3">
                 <h4>Quick Links</h4>
                 <ul>
                     <li>Menu</li>
@@ -116,7 +116,7 @@
                     <li>Feedback</li>
                 </ul>
             </div>
-            <div class="col-xs-4">
+            <div class="col-md-3">
                 <h4>Information Links</h4>
                 <ul>
                     <li>About us</li>
@@ -124,13 +124,19 @@
                     <li>Terms & Conditions</li>
                 </ul>
             </div>
-            <div class="col-xs-4">
+            <div class="col-md-3">
                 <h4>Social Media Links</h4>
                 <ul class="social-media">
-                    <li><img src="img/other/whatsapp.png" alt="" style="width: 10%;">+25470897380</li>
-                    <li><img src="img/other/fb.png" alt="" style="width: 10%;">PizzaHaven</li>
-                    <li><img src="img/other/ig.png" alt="" style="width: 10%;">PizzaHaven</li>
-                    <li><img src="img/other/twitter.png" alt="" style="width: 10%;">@pizzahaven</li>
+                    <li><img src="img/other/whatsapp.png" alt="" style="width: 12%;">+25470897380</li>
+                    <li><img src="img/other/fb.png" alt="" style="width: 12%;">PizzaHaven</li>
+                    <li><img src="img/other/ig.png" alt="" style="width: 12%;">PizzaHaven</li>
+                    <li><img src="img/other/twitter.png" alt="" style="width: 12%;">@pizzahaven</li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>Contact Information</h4>
+                <ul class="social-media">
+                    <li><i class="fas fa-map-marker-alt"></i> Ongata Rongai</li>
                 </ul>
             </div>
         </div>
