--- a/index.html
+++ b/index.html
@@ -127,16 +127,20 @@
             <div class="col-md-3">
                 <h4>Social Media Links</h4>
                 <ul class="social-media">
-                    <li><img src="img/other/whatsapp.png" alt="" style="width: 12%;">+25470897380</li>
-                    <li><img src="img/other/fb.png" alt="" style="width: 12%;">PizzaHaven</li>
-                    <li><img src="img/other/ig.png" alt="" style="width: 12%;">PizzaHaven</li>
-                    <li><img src="img/other/twitter.png" alt="" style="width: 12%;">@pizzahaven</li>
+                    <li><img src="img/other/whatsapp.png" alt="" style="width: 23%;">+25470897380</li>
+                    <li><img src="img/other/fb.png" alt="" style="width: 23%;">PizzaHaven</li>
+                    <li><img src="img/other/ig.png" alt="" style="width: 23%;">PizzaHaven</li>
+                    <li><img src="img/other/twitter.png" alt="" style="width: 23%;">@pizzahaven</li>
                 </ul>
             </div>
             <div class="col-md-3">
                 <h4>Contact Information</h4>
                 <ul class="social-media">
                     <li><i class="fas fa-map-marker-alt"></i> Ongata Rongai</li>
+                    <br>
+                    <li><i class="fas fa-envelope"></i> pizzahaven@gmail.com</li>
+                    <br>
+                    <li><i class="fas fa-mobile"></i> +2540708957380</li>
                 </ul>
             </div>
         </div>
