--- a/feedback.html
+++ b/feedback.html
@@ -21,15 +21,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="scripts.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="img/other/icon.png" type="image/x-icon">
     <title>PizzaHaven</title>
 </head>
 
-<body>
-    <h4>FEEDBACK </h4>
-    <div class="container">
-        <h5>Feedback</h5>
-        <form class="" action="">
+<body class="container-fluid feedback">
+    <script id="replace_with_navbar" src="nav.js"></script>
+    <h4 class="feed">FEEDBACK FORM</h4>
+    <div class="contain">
+        <form class="scale" >
             <div class="row">
                 <div class="col-xl-4">
                     <div class="name">
@@ -75,18 +76,20 @@
                 </div>
                 <div class="col-md-3">
                     <h6> Our Service</h6>
-                    
+
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-md-3">
-                    <button class="shadow p-1 mb-4 bg-white"><i class="far fa-paper-plane"></i><input type="submit" class="btn btn-bg" value="SUBMIT FEEDBACK"></button>
+                    <button class="shadow p-1 mb-4 bg-white"><i class="far fa-paper-plane"></i><input type="submit"
+                            class="btn btn-bg" value="SUBMIT FEEDBACK"></button>
                 </div>
             </div>
         </form>
 
     </div>
+    <script id="replace_with_footer" src="footer.js"></script>
 </body>
 
 </html>
