style footer links

--- a/footer.html
+++ b/footer.html
@@ -19,8 +19,7 @@
     <h4>Social Media Tags</h4>
     <ul class="social-media">
       <li><img src="img/other/whatsapp.png" alt="" style="width: 17%;">+25470897380</li>
-      <li><img src="img/other/fb.png" alt="" style="width: 17%;">PizzaHaven</li>
-      <li><img src="img/other/ig.png" alt="" style="width: 17%;">PizzaHaven</li>
+      <li><img src="img/other/fb.png" alt="" style="width: 17%;"> <img src="img/other/ig.png" alt="" style="width: 17%;">PizzaHaven</li>
       <li><img src="img/other/twitter.png" alt="" style="width: 17%;">@pizzahaven</li>
     </ul>
   </div>
