--- a/menu.html
+++ b/menu.html
@@ -26,88 +26,98 @@
     <title>PizzaHaven</title>
 </head>
 
-<body class="container-fluid">
+<body class="container-fluid menu-body">
     <script id="replace_with_navbar" src="nav.js"></script>
     <section class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/vegetarian.jpeg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/beefpizza.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/vegetarian.jpeg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/hamburger.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/hawaiianpizza.png" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/beefpizza.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/margherita.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/mozarella.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hamburger.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/pepperoni.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hawaiianpizza.png" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="img-fluid" src="img/BBQchcicken.jpg" alt="">
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/toppins.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <h3 class="card-title">Pizza</h3>
-                    <h6 class="card-text">Select toppings and crust too</h6>
-                    <a href="" class="btn">$10</a>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/mozarella.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/pepperoni.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/BBQchcicken.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/WhitePizza.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Pizza</h3>
+                        <span class="card-text">Select toppings and crust too</span>
+                        <a href="" class="btn">$10</a>
+                    </div>
                 </div>
             </div>
         </div>
