--- a/menu.html
+++ b/menu.html
@@ -34,9 +34,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/vegetarian.jpeg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Vegeterian Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$10</a>
                     </div>
                 </div>
             </div>
@@ -44,9 +44,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/beefpizza.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Beef Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$18</a>
                     </div>
                 </div>
             </div>
@@ -54,9 +54,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hamburger.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Hamburger Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$16</a>
                     </div>
                 </div>
             </div>
@@ -64,9 +64,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hawaiianpizza.png" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title"> Hawaiian Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$12</a>
                     </div>
                 </div>
             </div>
@@ -74,9 +74,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/toppins.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Topian Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$10</a>
                     </div>
                 </div>
             </div>
@@ -84,9 +84,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/mozarella.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Mozarella Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$17</a>
                     </div>
                 </div>
             </div>
@@ -94,9 +94,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/pepperoni.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Pepperoni Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$10</a>
                     </div>
                 </div>
             </div>
@@ -104,9 +104,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/BBQchcicken.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">Chicken Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$20</a>
                     </div>
                 </div>
             </div>
@@ -114,9 +114,9 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/WhitePizza.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Pizza</h3>
-                        <span class="card-text">Select toppings and crust too</span>
-                        <a href="" class="btn">$10</a>
+                        <h3 class="card-title">White Pizza</h3>
+                        <span class="card-text">Select toppings and crust</span>
+                        <a href="" class="btn btn-default btn-cust">$14</a>
                     </div>
                 </div>
             </div>
